--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,9 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     //    compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:multidex:1.0.1'
-//    compile 'com.jakewharton:butterknife:8.5.1'
-//    apt 'com.jakewharton:butterknife-compiler:8.5.1'
-//    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    compile 'com.jakewharton:butterknife:8.5.1'
+    apt 'com.jakewharton:butterknife-compiler:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     compile 'io.reactivex:rxjava:1.0.+'
     compile 'io.reactivex:rxandroid:0.23.+'
     compile 'com.squareup.retrofit:retrofit:1.9.+'
