implement almost all functions on contact detail (- share contact)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,10 @@
         <activity
             android:name=".AddContactActivity"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ContactDetailActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
